<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:elevation="@dimen/dimen_10"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_20"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/logo_iv"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:focusableInTouchMode="true"
                        android:focusable="true"
                        android:text="@string/logIntoYourAccountText"
                        android:textColor="#374e57"
                        android:id="@+id/log_into_your_Acc_tv"
                        android:textSize="@dimen/font_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:text="@string/emailText"
                        android:id="@+id/email_tv"
                        android:textColor="#bebfc2" />

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:background="@drawable/box_img"
                        android:ellipsize="end"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/dimen_5"

                        android:paddingRight="@dimen/dimen_5"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:text="@string/password"
                        android:id="@+id/pass_tv"
                        android:textColor="#bebfc2" />

                    <EditText
                        android:id="@+id/pass_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:background="@drawable/box_img"
                        android:ellipsize="end"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/dimen_5"

                        android:paddingRight="@dimen/dimen_5"
                        android:singleLine="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:orientation="horizontal"

                        android:weightSum="2">


                    </LinearLayout>
		    
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:id="@+id/forgot_password_tv"
                            android:text="@string/forgotPassTxt"
                            android:textSize="@dimen/font_12" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:background="@drawable/rounded_green_bg"
                        android:text="@string/loginText"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_22" />


                </LinearLayout>


            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/signUpForAnAccount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/signUpForAnAccountTextWithU"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
