<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:elevation="@dimen/dimen_10"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_20"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/logo" />

                    <TextView
                        android:id="@+id/sign_up_for_an_acc_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:text="@string/signUpForAnAccountText"
                        android:textColor="#374e57"
                        android:textSize="@dimen/font_20" />

                    <TextView
                        android:id="@+id/email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:text="@string/emailText"

                        android:textColor="#bebfc2" />

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:background="@drawable/box_img"
                        android:ellipsize="end"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/dimen_5"

                        android:paddingRight="@dimen/dimen_5"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/password_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:text="@string/password"
                        android:textColor="#bebfc2" />

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:background="@drawable/box_img"
                        android:ellipsize="end"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/dimen_5"

                        android:paddingRight="@dimen/dimen_5"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/confirmpassword_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:text="@string/retypepassword"
                        android:textColor="#bebfc2" />

                    <EditText
                        android:id="@+id/Confirmpassword_et"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:background="@drawable/box_img"
                        android:ellipsize="end"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/dimen_5"

                        android:paddingRight="@dimen/dimen_5"
                        android:singleLine="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:orientation="horizontal"
                        android:visibility="gone"

                        android:weightSum="2">

                        <RelativeLayout
                            android:id="@+id/corporate_rl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dimen_5"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/corporate_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/small_box"
                                android:gravity="center_vertical"
                                android:paddingLeft="@dimen/dimen_5"

                                android:text="@string/corporateText"
                                android:textColor="#374e57" />

                            <ImageView
                                android:id="@+id/corporate_iv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="@dimen/dimen_10"
                                android:src="@drawable/unselect" />


                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/individual_rl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_5"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/individual_tv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/small_box"
                                android:gravity="center_vertical"
                                android:paddingLeft="@dimen/dimen_5"

                                android:text="@string/individualText"
                                android:textColor="#374e57" />


                            <ImageView
                                android:id="@+id/individual_iv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="@dimen/dimen_10"
                                android:src="@drawable/unselect" />
                        </RelativeLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/continue_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:background="@drawable/rounded_green_bg"
                        android:text="@string/continueText"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_22" />


                </LinearLayout>


            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/haveAnAccount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/haveAnAccountText"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
